--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 body {
   font-family: 'Tajawal', cursive, 'Open Sans', sans-serif;
   margin: 0;
-  padding 0;
+  padding: 0;
   font-size: 18px;
   background: #e5e5e5;
   text-align: center;
@@ -32,7 +32,6 @@ ul, li {
 .main-header h1 {
   font-size: 30px;
   margin: 10px 0;
-  text-align: left;
 }
 
 .primary-text {
@@ -72,13 +71,47 @@ ul, li {
 #navbar li.current a, #navbar a:hover{
   color: #56a79a;
   border-bottom: 3px solid #56a79a;
-  padding-bottom: 3px;
+  padding-bottom: 1px;
 }
+
+/* THUMBGALLERY */
+
+.wrapper {
+  max-width: 860px;
+  margin: auto;
+  border: #e5e5e5 solid 3px;
+  background: #e5e5e5;
+}
+
+.main-img img,
+.imgs img {
+  width: 100%;
+  padding-bottom: 10px;
+}
+
+.imgs {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 5px;
+}
+
+/* Fade in animation */
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  opacity: 0.8;
+  animation: fadeIn 0.5s ease-in 1 forwards;
+}
+
 
 /* INTRO */
 
 .intro {
-  background: url(../images/prairie.jpg) no-repeat center center fixed;
+  background: url(../images/stadium.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -100,6 +133,43 @@ ul, li {
 
 .intro h2 {
   font-size: 40px;
+  background: #333;
+  border-radius: 10px;
+  padding: 5px;
+  color: #fff;
+  opacity: 0.7;
+}
+
+.geologic-history {
+  line-height: 1.8;
+  padding: 20px;
+}
+
+.geologic-history p{
+  font-size: 1.15em;
+}
+
+.geologic-history h2{
+  text-transform: uppercase;
+}
+
+/* GULF TROUGH */
+.gulf-trough {
+  border-top: 5px solid #56a79a;
+  background: #333;
+  color: #fff;
+  border-bottom: 5px solid #56a79a;
+}
+
+.gulf-trough figcaption {
+  padding-bottom: 30px;
+}
+
+.gulf-trough p {
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 1.2em;
+  line-height: 1.8;
 }
 
 /* PAYNES-INTRO */
@@ -118,11 +188,20 @@ ul, li {
   font-size: 40px;
 }
 
-.resources,
-.recreation-image, {
+.resources, {
   margin-top: 50px;
   padding-bottom: 200px;
   background: #e5e5e5
+}
+
+.recreation-image {
+  padding-top: 30px;
+  background: #333;
+  color: #fff;
+}
+
+.recreation-image img{
+  border-radius: 50%
 }
 
 .resources i {
@@ -136,6 +215,10 @@ ul, li {
 #recreation {
   background: #333;
   color: white;
+}
+
+#recreation figcaption{
+  padding-bottom: 40px;
 }
 
 /* INFO */
